# nb2workflow

./: .gitignore  .pre-commit-config.yaml  .travis-ci.yml  .travis.yml  Dockerfile  LICENSE  MANIFEST  Makefile  Pipfile  README.md  TODO  VERSION  buildjob.yaml  pyproject.toml  pytest.ini  requirements.txt  settings.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: pypi-publish.yaml  python-package.yml  python-publish.yml  python-test.yml  tag.yaml  version-bump-pr.yml
docs/: Makefile  conf.py  index.rst
nb2workflow/: __init__.py  configurer.py  container.py  cwl.py  deploy.py  galaxy.py  health.py  helpers.py  json.py  logging_setup.py  logstash.py  model.py  nbadapter.py  ontology.py  publish.py  schedule.py  semantics.py  sentry.py  service.py  testing.py  url_helper.py  validate.py  workflow.py  workflows.py
nb2workflow/config_dir/: conf_env.yml  conf_env.yml.example
nb2workflow/templates/: Dockerfile.jinja  buildjob.yaml.jinja  deployment.yaml.jinja  dockerfile_cm.yaml.jinja  pvc.yaml.jinja  service.yaml.jinja
tests/: conftest.py  test_basic.py  test_boolean.py  test_callback.py  test_cwl.py  test_deploy.py  test_exceptions.py  test_input_types.py  test_json.py  test_nbadapter.py  test_ontology.py  test_run.py  test_semantic_comment.py  test_service.py  test_service_repo.py  test_testing.py  test_token.py  test_type_reconcile.py  test_typing.py  test_workflows.py
tests/testfiles/: callback.ipynb  lightcurve.ipynb  multiline.ipynb  raising.ipynb  structured_input.ipynb  testbool.ipynb  testfilereference_extra_annotated.ipynb  testfileurl_extra_annotated.ipynb  testposixpath.ipynb  testposixpath_extra_annotated.ipynb  testposixpath_optional.ipynb  token.ipynb  token_no_access.ipynb
tests/testrepo/: workflow-notebook.ipynb
tests/tmptest/: testbool.ipynb
