[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "nb2workflow"
version = "1.3.115"
description = "convert notebook to workflow"
authors = [
    {name = "Volodymyr Savchenko", email = "contact@volodymyrsavchenko.com"}
]
license = {text = "GPLv3"}
readme = "README.md"
requires-python = ">=3.9,<3.14"
keywords = ["jupyter", "docker"]
classifiers = []

dependencies = [
    "papermill",
    "nbconvert>7.0.0",
    "psutil",
    "diskcache",
    "requests",
    "pyyaml",
    "scrapbook",
    "validators>=0.35.0",
    "sentry_sdk",
    "rdflib",
    "GitPython",
    'typeguard;python_version>"3.9"',
    'typeguard<4.4.3;python_version=="3.9"',
]

[project.optional-dependencies]
service = [
    "flask>=3.1.2",
    "pytest-flask",
    "flask-caching",
    "flask-cors",
    "flasgger",
    "apscheduler",
    "beautifulsoup4"
]
consul = [
    "python-consul",
]
owlready = [
    "owlready2==0.11",
]
cwl = [
    "cwlgen"
]
docker = [
    "docker",
    "checksumdir",
    "Jinja2"
]
domains = [
    "numpy",
    "astropy",
    "pandas",
    "matplotlib"
]
k8s = [
    "kubernetes",
    "Jinja2"
]
galaxy = [
    "oda_api",
    "bibtexparser>=2.0.0b3",
    "pypandoc_binary",
    "black",
    "isort",
    "autoflake"
]
mmoda = [
    "oda_api",
    "oda-knowledge-base"
]

[dependency-groups]
dev = [
    "pytest",
    "flake8",
    "pytest-cov",
    "tox"
]

[project.urls]
Homepage = "https://github.com/volodymyrss/nb2workflow"

[project.scripts]
nb2service = "nb2workflow.service:main"
nb2worker = "nb2workflow.container:main"
nb2workflow-version = "nb2workflow:version"
nb2cwl = "nb2workflow.cwl:main"
nb2rdf = "nb2workflow.ontology:main"
nb2deploy = "nb2workflow.deploy:main"
nbrun = "nb2workflow.nbadapter:main"
nbinspect = "nb2workflow.nbadapter:main_inspect"
nbreduce = "nb2workflow.nbadapter:main_reduce"
nb2galaxy = "nb2workflow.galaxy:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["nb2workflow"]
exclude = []

[tool.setuptools.package-data]
nb2workflow = ["templates/*.jinja"]
